Triptchy alignment fixes

--- a/sites/all/themes/bismuth/assets/css/style.css
+++ b/sites/all/themes/bismuth/assets/css/style.css
@@ -2106,3 +2106,12 @@ a:link, a:visited {
     content: "\201D";
 }
 /*-------End testimonials--------*/
+
+/*-------triptych-------*/
+.field-item.even li:first-child {
+    padding-top: 40px;
+}
+#node-241 > header h2, #node-242 > header h2, #node-243 > header h2 {
+    padding-top: 5px;
+}
+/*--------end of triptych------*/
